Cleaned up code warnings and changed wrapping methods to use eqClasses, still a bit messy when checking for root items and mothers